<resources>
    <string name="app_name">My_application</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="users">Users</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="vlevo">Back</string>
    <string name="cont">Continue</string>
    <string name="phone">Phone</string>
    <string name="Welcome">Welcome!</string>
    <string name="ret">Return</string>
    <string name="vyity">Quit the app?</string>
    <string name="exit">exit</string>
    <string name="rating">Your rating:</string>
    <string name="add_entry">Add entry</string>
    <string name="save_entry">Save entry</string>
    <string name="current_time">Current time</string>
    <string name="time">Time: </string>
    <string name="activity">Activity</string>
    <string name="description">Description</string>
    <string name="date_hist">Date:</string>
    <string name="activity_hist">Activity: </string>
    <string name="description_hist">Description: </string>
    <string name="select_language">Select language</string>
    <string name="num_of_entries">Number of entries available:</string>
    <string name="acc_status">Account Status</string>
    <string name="history">History</string>
    <string name="your_status_sub">Your status: Subscribed</string>
    <string name="your_status_unsub">Your status: Unsubscribed</string>
    <string name="buy_sub">Buy subscription</string>
    <string name="session">Session time has expired. Please log in again</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="thanks">Thank you for supporting our project!</string>
    <string name="close">Close</string>
    <string name="apply">Apply</string>
    <string name="remember">Remember me</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notify">Make new entries in the app</string>
    <string name="menu_button">Menu Button</string>
    <string name="menu">Menu</string>
    <string name="nav_header_title">UserName</string>
    <string name="add_photo">Add a photo</string>
    <string name="skip">Skip</string>
    <string name="settings">Settings</string>
    <string name="rename_profile">Rename a profile</string>
    <string name="change_photo">Change a photo</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="statistic">Statistic</string>
    <string name="timer">Timer</string>
</resources>