<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    tools:context=".SigninActivity">

    <ImageButton
        android:id="@+id/return_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/vlevo"
        app:srcCompat="@drawable/strelka_vlevo"
        android:transitionName="sign_in_transition"/>

    <TextView
        android:id="@+id/SignInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:transitionName="sign_in_transition" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignInTitle"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:inputType="textEmailAddress"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/signin_checkBox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:text="@string/remember" />

    <Button
        android:id="@+id/signin_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_checkBox"
        android:layout_centerInParent="true"
        android:layout_marginTop="34dp"
        android:text="@string/cont"
        tools:ignore="MissingConstraints" />

</RelativeLayout>
