<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="90dp">


    <ImageButton
        android:id="@+id/return_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:contentDescription="@string/ret"
        app:srcCompat="@drawable/strelka_vlevo"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/add_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/add_entry"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_time"
        android:textSize="18sp"
        android:layout_below="@+id/add_entry"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"/>

    <TextView
        android:id="@+id/clockTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/current_time"
        android:layout_toEndOf="@+id/current_time"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textSize="18sp"
        android:layout_below="@+id/current_time"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="25dp"/>

    <NumberPicker
        android:id="@+id/minutePicker"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/clockTextView"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/timer"
        android:background="@drawable/custom_language_button" />

    <EditText
        android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minutePicker"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:hint="@string/activity"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:minHeight="48dp"
        android:textSize="18sp"
        android:layout_below="@+id/activity"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:inputType="text"/>

<!--    <Button-->
<!--        android:id="@+id/btn_voice_for_description"-->
<!--        android:layout_width="44dp"-->
<!--        android:layout_height="44dp"-->
<!--        android:padding="6dp"-->
<!--        android:background="@drawable/custom_voice_button"-->
<!--        android:layout_alignTop="@+id/description"-->
<!--        android:drawableStart="@drawable/microphone"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:layout_alignParentEnd="true"/>-->

    <TextView
        android:id="@+id/text_of_entries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_entries"
        android:textSize="18sp"
        android:layout_below="@+id/description"
        android:layout_marginStart="27dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"/>

    <TextView
        android:id="@+id/num_of_entries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_toEndOf="@+id/text_of_entries"
        android:layout_alignTop="@+id/text_of_entries"/>

    <Button
        android:id="@+id/save_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_save_entry_button"
        android:text="@string/save_entry"
        android:layout_below="@+id/text_of_entries"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        />



</RelativeLayout>